--- a/UCR.Negotium/packages.config
+++ b/UCR.Negotium/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="log4net" version="2.0.8" targetFramework="net452" />
   <package id="MahApps.Metro" version="1.4.3" targetFramework="net452" />
   <package id="MahApps.Metro.IconPacks" version="1.7.1" targetFramework="net452" />
-  <package id="Negotium.Core" version="1.0.0" targetFramework="net452" />
   <package id="NReco.PdfGenerator" version="1.1.15" targetFramework="net452" />
+  <package id="NVelocity" version="1.0.3" targetFramework="net452" />
   <package id="Select.HtmlToPdf" version="17.1.0" targetFramework="net452" />
 </packages>
