Agregado formato de números general para todo el Software

--- a/UCR.Negotium/UCR.Negotium.csproj
+++ b/UCR.Negotium/UCR.Negotium.csproj
@@ -167,7 +167,7 @@
     <Compile Include="Extensions\GestorDatos.cs" />
     <Compile Include="Extensions\InverseBoolConverter.cs" />
     <Compile Include="Extensions\LocalContext.cs" />
-    <Compile Include="Extensions\MonedaFormatConverter.cs" />
+    <Compile Include="Extensions\CheckMonedaFormat.cs" />
     <Compile Include="StartWindow.xaml.cs">
       <DependentUpon>StartWindow.xaml</DependentUpon>
     </Compile>
