Actualizacion de reporte, solucion de problema con indicadores. agregacion de creditos y nuevas referencias, resolucion de problema con formato de moneda basado en el culture

--- a/UCR.Negotium/UCR.Negotium.csproj
+++ b/UCR.Negotium/UCR.Negotium.csproj
@@ -42,6 +42,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <RunCodeAnalysis>true</RunCodeAnalysis>
+    <CodeAnalysisRuleSet>ManagedMinimumRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -89,10 +90,6 @@
       <HintPath>..\packages\NVelocity.1.0.3\lib\NVelocity.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Select.HtmlToPdf, Version=17.1.0.0, Culture=neutral, PublicKeyToken=e0ae9f6e27a97018, processorArchitecture=MSIL">
-      <HintPath>..\packages\Select.HtmlToPdf.17.1.0\lib\net40\Select.HtmlToPdf.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Data" />
@@ -118,6 +115,9 @@
   <ItemGroup>
     <Compile Include="Dialogs\AcercaNegotium.xaml.cs">
       <DependentUpon>AcercaNegotium.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Dialogs\CreditosNegotium.xaml.cs">
+      <DependentUpon>CreditosNegotium.xaml</DependentUpon>
     </Compile>
     <Compile Include="Dialogs\ReferenciasNegotium.xaml.cs">
       <DependentUpon>ReferenciasNegotium.xaml</DependentUpon>
@@ -218,6 +218,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Dialogs\AnalisisAmbiental\RegistrarFactorAmbiental.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Dialogs\CreditosNegotium.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
