--- a/UCR.Negotium/packages.config
+++ b/UCR.Negotium/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="iTextSharp" version="5.5.12" targetFramework="net452" />
+  <package id="itextsharp.xmlworker" version="5.5.12" targetFramework="net452" />
   <package id="log4net" version="2.0.8" targetFramework="net452" />
   <package id="MahApps.Metro" version="1.4.3" targetFramework="net452" />
   <package id="MahApps.Metro.IconPacks" version="1.7.1" targetFramework="net452" />
