Correciones hasta la fecha 01/08/2018

--- a/UCR.Negotium.DataAccess/UCR.Negotium.DataAccess.csproj
+++ b/UCR.Negotium.DataAccess/UCR.Negotium.DataAccess.csproj
@@ -55,20 +55,16 @@
     <Compile Include="BaseData.cs" />
     <Compile Include="CantonData.cs" />
     <Compile Include="CostoData.cs" />
-    <Compile Include="CostoMensualData.cs" />
-    <Compile Include="CrecimientoOfertaArticuloData.cs" />
-    <Compile Include="DetalleProyeccionVentaData.cs" />
+    <Compile Include="CrecimientoOfertaData.cs" />
     <Compile Include="DistritoData.cs" />
     <Compile Include="EncargadoData.cs" />
     <Compile Include="ExportarDatos\ExportarData.cs" />
     <Compile Include="ExportarDatos\ExportarProyectoData.cs" />
     <Compile Include="FinanciamientoData.cs" />
-    <Compile Include="InteresFinanciamientoData.cs" />
     <Compile Include="OrganizacionProponenteData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ProponenteData.cs" />
     <Compile Include="ProvinciaData.cs" />
-    <Compile Include="ProyeccionVentaArticuloData.cs" />
+    <Compile Include="ProyeccionVentaData.cs" />
     <Compile Include="ProyectoData.cs" />
     <Compile Include="ReinversionData.cs" />
     <Compile Include="InversionData.cs" />
