--- a/UCR.Negotium.Domain/UCR.Negotium.Domain.csproj
+++ b/UCR.Negotium.Domain/UCR.Negotium.Domain.csproj
@@ -55,19 +55,21 @@
     <Compile Include="Canton.cs" />
     <Compile Include="Costo.cs" />
     <Compile Include="CostoMensual.cs" />
-    <Compile Include="CrecimientoOfertaArticulo.cs" />
+    <Compile Include="CrecimientoOferta.cs" />
     <Compile Include="Depreciacion.cs" />
     <Compile Include="DetalleProyeccionVenta.cs" />
     <Compile Include="Distrito.cs" />
     <Compile Include="Encargado.cs" />
     <Compile Include="Enums\Enums.cs" />
     <Compile Include="Enums\EnumsHelper.cs" />
+    <Compile Include="Extensions\FormatoDeNumeros.cs" />
     <Compile Include="Financiamiento.cs" />
+    <Compile Include="IndicadorEconomico.cs" />
     <Compile Include="InteresFinanciamiento.cs" />
     <Compile Include="OrganizacionProponente.cs" />
     <Compile Include="Proponente.cs" />
     <Compile Include="Provincia.cs" />
-    <Compile Include="ProyeccionVentaArticulo.cs" />
+    <Compile Include="ProyeccionVenta.cs" />
     <Compile Include="Proyecto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Inversion.cs" />
@@ -80,9 +82,9 @@
     <Compile Include="VariacionAnualCosto.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="ClassDiagram.cd" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
