--- a/UCR.Negotium/App.config
+++ b/UCR.Negotium/App.config
@@ -9,5 +9,7 @@
   </connectionStrings>
   <appSettings>
     <add key="versionDb" value="1.1.0.0" />
+    <!-- ACADEMICO o PROFESIONAL -->
+    <add key="tipoUso" value="ACADEMICO"/>
   </appSettings>
 </configuration>
