--- a/UCR.Negotium/UCR.Negotium.csproj
+++ b/UCR.Negotium/UCR.Negotium.csproj
@@ -424,6 +424,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\UCR.Negotium.Base\UCR.Negotium.Base.csproj">
+      <Project>{06BB9CF2-B5B1-455B-84C9-FC48EFBF12BA}</Project>
+      <Name>UCR.Negotium.Base</Name>
+    </ProjectReference>
     <ProjectReference Include="..\UCR.Negotium.DataAccess\UCR.Negotium.DataAccess.csproj">
       <Project>{858f9a52-dadf-4c16-9d2c-83932906ce55}</Project>
       <Name>UCR.Negotium.DataAccess</Name>
