--- a/UCR.Negotium.Base/UCR.Negotium.Base.csproj
+++ b/UCR.Negotium.Base/UCR.Negotium.Base.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{37573984-06BA-43F0-8AAC-0D8CAAA97867}</ProjectGuid>
+    <ProjectGuid>{06BB9CF2-B5B1-455B-84C9-FC48EFBF12BA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>UCR.Negotium.Domain</RootNamespace>
-    <AssemblyName>UCR.Negotium.Domain</AssemblyName>
+    <RootNamespace>UCR.Negotium.Base</RootNamespace>
+    <AssemblyName>UCR.Negotium.Base</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -20,7 +20,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <CodeAnalysisRuleSet>ManagedMinimumRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -29,8 +28,13 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <RunCodeAnalysis>true</RunCodeAnalysis>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>..\packages\NLog.4.5.10\lib\net45\NLog.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
@@ -47,38 +51,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AnalisisAmbiental\FactorAmbiental.cs" />
-    <Compile Include="Canton.cs" />
-    <Compile Include="Costo.cs" />
-    <Compile Include="CostoMensual.cs" />
-    <Compile Include="CrecimientoOferta.cs" />
-    <Compile Include="Depreciacion.cs" />
-    <Compile Include="DetalleProyeccionVenta.cs" />
-    <Compile Include="Distrito.cs" />
-    <Compile Include="Encargado.cs" />
     <Compile Include="Enumerados\Enums.cs" />
-    <Compile Include="Financiamiento.cs" />
-    <Compile Include="IndicadorEconomico.cs" />
-    <Compile Include="InteresFinanciamiento.cs" />
-    <Compile Include="OrganizacionProponente.cs" />
-    <Compile Include="Proponente.cs" />
-    <Compile Include="Provincia.cs" />
-    <Compile Include="ProyeccionVenta.cs" />
-    <Compile Include="Proyecto.cs" />
+    <Compile Include="Enumerados\EnumsHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Inversion.cs" />
-    <Compile Include="Reinversion.cs" />
-    <Compile Include="TipoMoneda.cs" />
-    <Compile Include="TipoOrganizacion.cs" />
-    <Compile Include="TipoProyecto.cs" />
-    <Compile Include="UnidadMedida.cs" />
-    <Compile Include="VariacionAnualCosto.cs" />
+    <Compile Include="Trace\TraceException.cs" />
+    <Compile Include="Utilidades\FormatoDeNumeros.cs" />
+    <Compile Include="Utilidades\Operaciones.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\UCR.Negotium.Base\UCR.Negotium.Base.csproj">
-      <Project>{06bb9cf2-b5b1-455b-84c9-fc48efbf12ba}</Project>
-      <Name>UCR.Negotium.Base</Name>
-    </ProjectReference>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
