Creación de indicador Relacion B/C sin inversión inicial. Campo días de desface para parametrizar el calculo de capital de trabajo. Actualización del reporte y base de datos

--- a/UCR.Negotium/UCR.Negotium.csproj
+++ b/UCR.Negotium/UCR.Negotium.csproj
@@ -190,6 +190,7 @@
     <Compile Include="Extensions\LocalContext.cs" />
     <Compile Include="Extensions\CheckMonedaFormat.cs" />
     <Compile Include="Extensions\ResourceDictionaryEvents.cs" />
+    <Compile Include="Extensions\Validador.cs" />
     <Compile Include="StartWindow.xaml.cs">
       <DependentUpon>StartWindow.xaml</DependentUpon>
     </Compile>
